# RustWordle

./: Cargo.toml
gui/: Cargo.toml
gui/src/: main.rs  widgets.rs
src/: main.rs  wordle.rs
