[package]
name = "rs-wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
iced = { version = "0.10.0", features = ["debug", "image", "svg", "advanced"] }
iced_native = "0.10.3"
iced_wgpu = "0.11.1"
tracing-subscriber = "0.3"
